[FIND-566]  fixing the wrong padding
[rev: trivial]

--- a/webapp/core/src/main/less/views/search-filters.less
+++ b/webapp/core/src/main/less/views/search-filters.less
@@ -113,7 +113,7 @@
 
 .database-name,
 .category-name {
-  padding: @nil @custom6;
+  padding-left: @custom6;
 }
 
 .databases-list {
